GNOME Bugzilla – Bug 709953
a kerberos crasher fix
Last modified: 2013-10-14 18:09:49 UTC
This is more fallout from bug 705395 I think. We still can end up in a situation where we're setting the alarm in on thread while clearing in another, so we need to add synchronization.
Created attachment 257064 [details] [review] goaalarm: add locks when setting up timers An alarm could be getting set in one thread while getting cleared in another. We need to protect against that.
Created attachment 257066 [details] [review] goaalarm: add locks when setting up timers An alarm could be getting set in one thread while getting cleared in another. We need to protect against that.
i thought about it more, and the updated patch expands the lock to cover all the related state (such as the expiration time itself), not just the timer sources.
Review of attachment 257066 [details] [review]: Looks fine to me. Didn't encounter any breakage after a round of testing.
Attachment 257066 [details] pushed as 0abe062 - goaalarm: add locks when setting up timers