goaalarm: add locks when setting up timers

An alarm could be getting set in one thread while getting
cleared in another.  We need to protect against that.

https://bugzilla.gnome.org/show_bug.cgi?id=709953